--- a/news/_posts/2012-03-08-1-0-0-beta4-release.textile
+++ b/news/_posts/2012-03-08-1-0-0-beta4-release.textile
@@ -3,4 +3,4 @@ layout: default
 title: Glimpse Version 1.0.0 (Beta 4) Released
 ---
 
-Out GitHub page and Maven repository are accessible again, and a new beta release of Glimpse 1.0.0 is available for download. This minor update contains mostly cosmetic and clean-up fixes and license clarifications.
+The Glimpse GitHub page and Maven repository are accessible again, and a new release (Glimpse 1.0.0-beta4) is available for download. This minor update contains mostly cosmetic and clean-up fixes and license clarifications.
