fixed links in a number of locations on the site (they should now be relative to the site root)

--- a/blog/_posts/2012-02-25-glimpse-intro-video.textile
+++ b/blog/_posts/2012-02-25-glimpse-intro-video.textile
@@ -9,4 +9,4 @@ title: Glimpse Introduction Video Posted
 
 <p>For this video, I avoided showing any code, or going into implementation details, in order to keep it short. That said, I would love to put together another video with a more developer oriented walkthrough demonstrating how to build a simple Glimpse application. However, these things aren't quick to put together, so I'm not sure when a developer introduction video will be ready.</p>
 
-<p>In the mean time there are lots of other resources on the site. There's a <a href="guide.html">Getting Started Guide</a> which is incomplete, but growing. The <a href="https://groups.google.com/forum/?fromgroups#!forum/metsci-glimpse"> Discussion Forum</a> is a great place to get your questions answered. Finally, hands down the best way to learn about Glimpse is to <a href="download.html">download</a> the source code or fork us on <a href="https://github.com/metsci/glimpse">GitHub</a> and run the <b>over forty</b> simple examples which provide samples of everything you need to know to include Glimpse in your Java application.</p>
+<p>In the mean time there are lots of other resources on the site. There's a <a href="/guide.html">Getting Started Guide</a> which is incomplete, but growing. The <a href="https://groups.google.com/forum/?fromgroups#!forum/metsci-glimpse"> Discussion Forum</a> is a great place to get your questions answered. Finally, hands down the best way to learn about Glimpse is to <a href="/download.html">download</a> the source code or fork us on <a href="https://github.com/metsci/glimpse">GitHub</a> and run the <b>over forty</b> simple examples which provide samples of everything you need to know to include Glimpse in your Java application.</p>
