fixed previous commit, which did not take into account the /glimpse base-url which github places the site at

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ http://help.rubygems.org/discussions/problems/350-installing-rubygems-137-and-je
 
 === To Test Locally
 
-jekyll --server --no-auto --safe
+jekyll --server --no-auto --safe --base-url '/glimpse'
 
 === Browse
 
