--- a/news/_posts/2012-02-22-1-0-0-beta3-release.textile
+++ b/news/_posts/2012-02-22-1-0-0-beta3-release.textile
@@ -2,9 +2,9 @@
 layout: default
 title: Glimpse Version 1.0.0 (Beta 3) Released!
 ---
-<a href="/glimpse"><img src="/glimpse/images/GlimpseLogo.png" style="margin-left: auto; margin-right:auto; display: block; margin-top: 20px; margin-bottom: 10px"/></a>
+<a href="/glimpse/glimpse"><img src="/glimpse/images/GlimpseLogo.png" style="margin-left: auto; margin-right:auto; display: block; margin-top: 20px; margin-bottom: 10px"/></a>
 
-We're excited to announce the open source launch of the Glimpse data visualization library! You can fork the code on <a href="https://github.com/metsci/glimpse">GitHub</a> or check out the <a href="/download.hatml">Download</a> page for binary releases.
+We're excited to announce the open source launch of the Glimpse data visualization library! You can fork the code on <a href="https://github.com/metsci/glimpse">GitHub</a> or check out the <a href="/glimpse/download.hatml">Download</a> page for binary releases.
 
 Glimpse is a Java library which enables developers to easily construct interactive applications which take advantage of OpenGL and GPU hardware like programmable shader pipelines and cached texture memory to display large quantities of data at interactive speeds.
 
@@ -14,13 +14,13 @@ There is lots of other information available at <a href="http://glimpse.metsci.c
 
 <div class="list">
 <ul>
-<li><a href="/apidocs/1.0.x/index.html">Javadoc</a>
-<li><a href="/screenshots.html">Screenshots</a>
-<li><a href="/videos.html">Video</a>
-<li><a href="/guide.html">Getting Started Guide</a>
+<li><a href="/glimpse/apidocs/1.0.x/index.html">Javadoc</a>
+<li><a href="/glimpse/screenshots.html">Screenshots</a>
+<li><a href="/glimpse/videos.html">Video</a>
+<li><a href="/glimpse/guide.html">Getting Started Guide</a>
 <li><a href="https://groups.google.com/forum/?fromgroups#!forum/metsci-glimpse">Mailing List / Forum</a>
 <li><a href="https://github.com/metsci/glimpse/wiki">Wiki</a>
-<li><a href="/blog.html">Blog</a>
+<li><a href="/glimpse/blog.html">Blog</a>
 </ul>
 </div>
 
