--- a/README
+++ b/README
@@ -1,6 +1,7 @@
-=== Installing Jekyll on Ubuntu 14.04
+=== Installing Ruby and Jekyll on Ubuntu 14.04
 
-http://michaelchelen.net/81fa/install-jekyll-2-ubuntu-14-04/
+https://jekyllrb.com/docs/installation/
+https://www.brightbox.com/docs/ruby/ubuntu/
 
 === To Test Locally
 
