--- a/core/src/main/resources/shaders/colortex2d/README
+++ b/core/src/main/resources/shaders/colortex2d/README
@@ -3,7 +3,7 @@ colortex2d
 Applies a 2d rgba texture to a set of vertices specified in axis coordinates.
 
 Java Wrappers:
- * com.metsci.glimpse.support.shader.ColorTextureProgram2D.java
+ * com.metsci.glimpse.support.shader.ColorTextureProgram2D
  
-Example Usages:
- * com.metsci.glimpse.painter.decoration.WatermarkPainter.java
+Usage Examples:
+ * com.metsci.glimpse.painter.decoration.WatermarkPainter
