Add example showing line joins for many different angles

--- a/core/src/main/resources/shaders/line/README
+++ b/core/src/main/resources/shaders/line/README
@@ -7,3 +7,4 @@ Java Wrappers:
 
 Usage Examples:
  * com.metsci.glimpse.examples.basic.LinePathExample
+ * com.metsci.glimpse.examples.basic.LineJoinExample
