--- a/core/src/main/resources/shaders/triangle/colortex1d/README
+++ b/core/src/main/resources/shaders/triangle/colortex1d/README
@@ -1,6 +1,6 @@
 colortex1d
 
-Applies a 1d rgba texture to a set of vertices specified in axis coordinates.
+Applies a 1d rgba texture to triangles specified in axis coordinates.
 
 Java Wrappers:
  * com.metsci.glimpse.support.shader.ColorTextureProgram1D
