--- a/core/src/main/resources/shaders/point/point_attribute_color_size/README
+++ b/core/src/main/resources/shaders/point/point_attribute_color_size/README
@@ -6,3 +6,4 @@ Java Wrappers:
  * com.metsci.glimpse.support.shader.point.PointAttributeColorSizeProgram
 
 Usage Examples:
+ * com.metsci.glimpse.painter.shape.ShadedPointPainter
