Fix typo in line_multi_color/README

--- a/core/src/main/resources/shaders/line/line_multi_color/README
+++ b/core/src/main/resources/shaders/line/line_multi_color/README
@@ -1,4 +1,4 @@
-line_nulti_color
+line_multi_color
 
 Draws 2D lines with feathered edges, stippling, and joins and segment colors specified in an attribute array
 
